--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="items-cards_container">
                 <div class="item-card">
                     <div class="item-card_img">
-                        <img src="./assets/imgs/IMG-HTML.png" alt="">
+                        <img src="./assets/imgs/IMG-HTML.png" alt="HTML">
                     </div>
 
                     <div class="item-card_text">
@@ -71,13 +71,13 @@
                     </div>
 
                     <div class="item-card_img">
-                        <img src="./assets/imgs/IMG-CSS.png" alt="">
+                        <img src="./assets/imgs/IMG-CSS.png" alt="CSS">
                     </div>
                 </div>
                 
                 <div class="item-card">
                     <div class="item-card_img">
-                        <img src="./assets/imgs/IMG-JS.png" alt="">
+                        <img src="./assets/imgs/IMG-JS.png" alt="Javascript">
                     </div>
 
                     <div class="item-card_text">
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="item-card_img">
-                        <img src="./assets/imgs/IMG-UX-UI.png" alt="">
+                        <img src="./assets/imgs/IMG-UX-UI.png" alt="UX/UI">
                     </div>
                 </div>
             </div>
